--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="flex justify-between h-20">
                 <div class="flex items-center">
                     <div class="flex-shrink-0 flex items-center">
-                        <img src="pictures/alpha.png" alt="Logo" class="h-20 w-auto animate__animated animate__fadeIn">
+                        <img src="alpha.png" alt="Logo" class="h-20 w-auto animate__animated animate__fadeIn">
                     </div>
                 </div>
                 <div class="hidden md:flex items-center space-x-6">
